[project]
name = "StringWalk"
version = "0.1.0"
description = "A Python Game"
requires-python = ">=3.11"
dependencies = [
    "PyQt6",
    "qasync",
    "nest_asyncio",
]

[project.scripts]
stringwalk = "stringwalk.runGame:main"   # `stringwalk` becomes a command

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stringwalk = [
    "**/*.json",
    "assets/**/*.mp3",
    "assets/**/*.wav",
    "assets/**/*.mp4",
    "assets/**/*.gif",
    "assets/**/*.png",
    "assets/**/*.jpg",
    "assets/**/*.svg",
    "**/*.qss"
]